# new-chess

./: .gitmodules  CMakeLists.txt  README.md
chess-client/: CMakeLists.txt  resources.qrc
chess-client/qml/: Board.qml  Piece.qml
chess-client/src/: ChessClient.cpp  ChessClient.h  ClientBoard.cpp  ClientBoard.h  GameController.cpp  GameController.h  main.cpp
chess-server/: CMakeLists.txt
chess-server/doc/: board.txt  serialization.txt
chess-server/include/: ConcreteNetworkManager.h  Figure.h  Figures.h  GameObject.h  MemoryStream.h
chess-server/include/figures/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
chess-server/interface/: ChessServer.h
chess-server/src/: Board.cpp  ChessServer.cpp  ConcreteNetworkManager.cpp  Figure.cpp  GameObject.cpp  MemoryStream.cpp
chess-server/src/figures/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
chess-server/tests/: BoardTest.cpp  CMakeLists.txt  FigureTest.cpp  FiguresTest.cpp  GameObjectTest.cpp  MemoryStreamTest.cpp
common/include/: Board.h  Figure.h  GameConstants.h  GameObject.h  MemoryStream.h  MoveValidator.h  NetworkManager.h  SafeThreadQueue.h
common/include/figures/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
common/src/: Board.cpp  Figure.cpp  GameObject.cpp  MemoryStream.cpp  MoveValidator.cpp
common/src/figures/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
