CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

IF (CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
    SET (CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-fdeclspec")
    SET (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-fdeclspec")
ENDIF ()

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY (${CMAKE_CURRENT_SOURCE_DIR}/chess-server)
ADD_SUBDIRECTORY (${CMAKE_CURRENT_SOURCE_DIR}/chess-client)
